<resources>
    <string name="app_name">馬經圖庫</string>
    <string name="app_home">首页</string>
    <string name="app_discovery">圈子</string>
    <string name="app_mine">我的</string>
    <string name="app_collection">收藏</string>
    <string name="app_publish">发布</string>
    <string name="app_mine_invite_code">邀请码： </string>
    <string name="app_mine_binding_mobile_phone">绑定手机：</string>
    <string name="app_mine_unbinding">未绑定</string>
    <string name="app_mine_total_commission">总佣金</string>
    <string name="app_mine_sales_today">今日注册</string>
    <string name="app_mine_total_number">总注册</string>
    <string name="app_mine_balance">我的余额:</string>
    <string name="app_mine_withdrawal">提现</string>
    <string name="app_mine_payment">结算方式</string>
    <string name="app_mine_statement">月结</string>
    <string name="app_mine_instructions">说明</string>
    <string name="app_invitation_code">邀请码：</string>
    <string name="app_settlement_method">结算方式：</string>
    <string name="app_monthly_receipts">本月收支：</string>
    <string name="app_change_password_input_phone">输入手机号</string>
    <string name="app_male">男</string>
    <string name="app_female">女</string>
    <string name="app_change_password_input_code">请输入您的验证码</string>
    <string name="app_change_password_input_pwd">请输入您的密码</string>
    <string name="app_change_password_input_pwd2">请再次输入您的密码</string>
    <string name="app_change_password_input_invite_code">请输入您的邀请码</string>
    <string name="app_perfect_information_nickname">昵称：</string>
    <string name="app_perfect_information_sed">选择您的性别：</string>
    <string name="app_perfect_information_birthday">选择您的生日：</string>
    <string name="loading">加载中...</string>
    <string name="choose_time">选择时间</string>
    <string name="confirm">确认</string>
    <string name="my_comments">我的评论</string>
    <string name="working_days">工作日</string>
    <string name="photo_albums">相册上传</string>
    <string name="hours_day">24小时全天候</string>
    <string name="original_image">查看原图</string>
    <string name="official_website">官方网址</string>
    <string name="photo_upload">拍照上传</string>
    <string name="i_found">我的发现</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="save_local">保存本地</string>
    <string name="click_copy_qr_code">点击复制二维码</string>
    <string name="notice_error_bg">亲 暂无消息通知喔</string>
    <string name="i_found_error_bg">大胆说出你的想法吧，骚年！</string>
    <string name="perfect_information">完善资料</string>
    <string name="color">彩色</string>
    <string name="daily">日结</string>
    <string name="monthly_statement">月结</string>
    <string name="available_balance">可提现余额(元)</string>
    <string name="have_withdrawal">已提现</string>
    <string name="month">月</string>
    <string name="method_payment">结算方式</string>
    <string name="wechat">微信</string>
    <string name="payment_code">收款码</string>
    <string name="billing_instructions">结算说明</string>
    <string name="monthly_statement_mode">月结模式</string>
    <string name="balance_payments">本月收支</string>
    <string name="did_not_concern">未关注</string>
    <string name="title_one_01">也称为随时结算模式,推广的佣金有多少,那么就可以申请结算多少日结模式不支持累计结算。</string>
    <string name="pay_special_attention">特别注意</string>
    <string name="title_one_02">1.两种模式任选一种,但是选择之后不再接受更改。 2.推广佣金存入余额,余额支持随时申请提现。</string>
    <string name="next_step">完成</string>
    <string name="my_comments_error">亲 暂无评论消息喔</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="loading_in">加载中…</string>
    <string name="balance_withdrawal">余额提现</string>
    <string name="app_collection_error">亲 您的收藏夹是空的哦</string>
    <string name="daily_pattern">日结模式</string>
    <string name="title_one_03">也称为随时结算模式,推广的佣金有多少,那么就可以申请结算多少。日结模式不支持累计结算。</string>
    <string name="title_one_04">1.两种模式任选一种,但是选择之后不再接受更改。。</string>
    <string name="account_security">账户安全</string>
    <string name="message_remind">消息提醒</string>
    <string name="privacy">隐私</string>
    <string name="clear_cache">清理缓存</string>
    <string name="niight_mode">夜间模式</string>
    <string name="language_switching">简繁切换</string>
    <string name="version_information">版本信息</string>
    <string name="feedback">意见反馈</string>
    <string name="title_one_05">每个自然月(每个月的一号凌晨)会把您的上一个月的推广佣金存入您的余额,且是以累计的方式进行存入。比如:您第一个月的推广佣金是100元,第二个月是125元,那么您在第一个月能提现的佣金为:100元;第二个月能提现的佣金为:100+125=225元。那么第三个月就算您的推广数为0元,您仍能结算到225元,如第三个月的佣金是100元,那么第三个月能提现的佣金是：100+125+100=325元 以此类推</string>
    <string name="log_out">退出登录</string>
    <string name="you_are_logged_yet">您还未登录</string>
    <string name="dialog_login_title">微信一键登录 飞一般感觉</string>
    <string name="wechat_log_in">微信登录</string>
    <string name="mobile_phone_login">手机登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="please_mobile_phone_number">请输入正确的手机号码</string>
    <string name="complete_title_one">请输入正确的手机号码！</string>
    <string name="complete_title_two">密码至少六位数哦！</string>
    <string name="complete_title_three">两次输入密码不一致！</string>
    <string name="complete_title_four">（非必填）</string>
    <string name="complete_registration">完成注册</string>
    <string name="share_something_new">分享新鲜事。。。</string>
    <string name="please_enter_your_trading_password">请输入交易密码</string>
    <string name="please_enter_your_trading_password_again">请再次输入交易密码</string>
    <string name="cancel_attention">取消关注</string>
    <string name="read">已读</string>
    <string name="please_withdrawal_method">请选择提现方式</string>
    <string name="a_secret">保密</string>
    <string name="bank_card">银行卡</string>
    <string name="pay_treasure">支付宝</string>
    <string name="cancel">取消</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="title_one_06">每个自然月(每个月的一号凌晨)会把您的上一个月的推广佣金存入您的余额,且是以累计的方式进行存入。比如:您第一个月的推广佣金是100元,第二个月是125元,那么您在第一个月能提现的佣金为:100元;第二个月能提现的佣金为:100+125=225元。那么第三个月就算您的推广数为0元,您仍能结算到225元,如第三个月的佣金是100元,那么第三个月能提现的佣金是：100+125+100=325元 以此类推</string>
    <string name="title_one_07">2.推广佣金存入余额,余额支持随时申请提现。</string>
    <string name="is">正</string>
    <string name="in">在</string>
    <string name="open">开</string>
    <string name="prize">奖</string>
    <string name="please">请</string>
    <string name="a_little">稍</string>
    <string name="after">后</string>
    <string name="change_password">修改密码</string>
    <string name="personal_information">个人信息</string>
    <string name="persons_image">个人头像</string>
    <string name="invite_code">邀请码</string>
    <string name="annual_drawing_record">年开奖记录</string>
    <string name="descending_order">降序</string>
    <string name="his_information">他的信息</string>
    <string name="has_mutual_concern">已互关注</string>
    <string name="add_the_attention">添加关注</string>
    <string name="period">期</string>
    <string name="paying_attention">互相未关注</string>
    <string name="focus_each_other">互相关注</string>
    <string name="he_paid_attention_me">他关注了我</string>
    <string name="i_paid_attention_him">我关注了他</string>
    <string name="is_not_set">未设置</string>
    <string name="lottery_record">开奖记录</string>
    <string name="lottery_record_title01">特码单双: 双</string>
    <string name="lottery_record_title02">特码单双: 单</string>
    <string name="lottery_record_title03">特码大小: 大</string>
    <string name="lottery_record_title04">特码大小: 小</string>
    <string name="lottery_record_title05">总和大小: 大</string>
    <string name="lottery_record_title06">总和大小: 小</string>
    <string name="lottery_record_title07">总和单双: 双</string>
    <string name="lottery_record_title08">总和单双: 单</string>
    <string name="works">作品</string>
    <string name="dynamic">动态</string>
    <string name="like">喜欢</string>
    <string name="black_and_white">黑白</string>
    <string name="user">用户</string>
    <string name="about_us">关于我们</string>
    <string name="my_attention">我的关注</string>
    <string name="focus_on">关注</string>
    <string name="fans">粉丝</string>
    <string name="notice">通知</string>
    <string name="setting">设置</string>
    <string name="withdrawal">提现</string>
    <string name="my_account">我的账户</string>
    <string name="my_news">我的消息</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="copy_invitation_code_successfully">复制邀请码成功</string>
    <string name="saved_qr_code_successfully">保存二维码成功</string>
    <string name="number_collection">收藏人数</string>
    <string name="look_number">查看人数</string>
    <string name="comments_number">评论人数</string>
    <string name="mine_notice_title">系统提示：</string>
    <string name="my_account_adapter_yitle01">总收入￥</string>
    <string name="my_account_adapter_yitle02">总支出￥</string>
    <string name="my_account_item_01">未知</string>
    <string name="my_account_item_02">本日收支</string>
    <string name="my_account_item_03">余额提现</string>
    <string name="my_account_item_04">奖励</string>
    <string name="set_payment_method">设置支付方式</string>
    <string name="trade_password">交易密码</string>
    <string name="withdraw_pay">请上传您的支付宝收款码 以后方便提现</string>
    <string name="withdraw_pay1">请上传您的微信收款码 以后方便提现</string>
    <string name="withdraw_pay2">请上传您的银行卡资料 以后方便提现</string>
    <string name="withdraw_pay_one">提现说明</string>
    <string name="withdraw_pay_two">1.每次提现金额不少于100.00元；\n2.提现不收取任何手续费\n3.提现约24小时之内，并且审核通过后到账</string>
    <string name="confirm_again">再次确认</string>
    <string name="withdraw_password">1.设置密码请输入6-15位，包括数字、字母(区别大小写)；\n2.一定要记住自己设置的交易密码</string>
    <string name="complete">完成</string>
    <string name="message_setting">消息提醒</string>
    <string name="message_setting_1">音效</string>
    <string name="message_setting_2">马经内置音效</string>
    <string name="message_setting_3">包括刷新、滑动、发布等操作反馈音效</string>
    <string name="message_setting_4">通知</string>
    <string name="message_setting_5">新消息提醒</string>
    <string name="message_setting_6">关闭后，马经不运行时将收不到新消息提醒</string>
    <string name="message_setting_7">横幅</string>
    <string name="message_setting_8">应用内横幅提醒</string>
    <string name="message_setting_9">关闭后，马经运行时收到的消息、开奖信息\n将不再以横幅的样式提醒</string>
    <string name="message_setting_10">铃声提醒</string>
    <string name="message_setting_11">震动提醒</string>
    <string name="et_commments_title">一起聊天吧~</string>
    <string name="send">发送</string>
    <string name="submit_ok">提交成功</string>
    <string name="submit_error">提交失败</string>
    <string name="set_pwd_eror">请输入密码6-15位,包括数字、字母</string>
    <string name="up_load_img">需要上传收款码图片</string>
    <string name="hint_card_input_1">银行卡账号</string>
    <string name="hint_card_input_2">姓名</string>
    <string name="hint_card_input_3">卡号</string>
    <string name="hint_card_input_4">请添加持卡人姓名</string>
    <string name="hint_card_input_5">请添加持卡人银行卡账号</string>
    <string name="upload_card_info">请输入真实的姓名与银行卡号</string>
    <string name="upload_card_info6">请使用储蓄卡</string>
    <string name="upload_card_info7">无法识别卡号，请确认输入是否正确</string>
    <string name="setting_connceal">隐私</string>
    <string name="setting_connceal_1">收支显示</string>
    <string name="setting_connceal_2">是否让所有人查看您的收入</string>
    <string name="setting_connceal_3">结算方式显示</string>
    <string name="setting_connceal_4">是否让所有人查看您的结算方式</string>
    <string name="setting_connceal_5">我的二维码显示</string>
    <string name="setting_connceal_6">打开后更方便关注到您</string>
    <string name="in_download">下载中</string>
    <string name="setting_account_safe1">账户安全</string>
    <string name="setting_account_safe2">绑定手机</string>
    <string name="setting_account_safe4">去修改</string>
    <string name="setting_account_safe5">登录密码</string>
    <string name="setting_account_safe6">已设置</string>
    <string name="setting_account_safe7">支付密码</string>
    <string name="setting_account_safe8">未设置</string>
    <string name="setting_account_safe9">社交账号绑定</string>
    <string name="setting_account_safe10">微信</string>
    <string name="setting_account_safe11">聊天室</string>
    <string name="setting_account_safe12">未绑定</string>
    <string name="setting_account_safe13">已绑定</string>
    <string name="setting_account_safe14">去绑定</string>
    <string name="total_top_dialog">共</string>
</resources>