<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ECECEC"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_top_bg">

        <include layout="@layout/include_activity_top" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:gravity="bottom"
        android:paddingLeft="13dp"
        android:paddingBottom="2dp"
        android:text="@string/message_setting_1"
        android:textColor="@color/color_4D4D4D"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/music_set_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="13dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/message_setting_2"
                android:textColor="@color/color_4D4D4D"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/message_setting_3"
                android:textColor="@color/color_939393"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/music_set_img"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="13dp"
            android:src="@drawable/select_open" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="bottom"
            android:paddingLeft="13dp"
            android:paddingBottom="2dp"
            android:text="@string/message_setting_4"
            android:textColor="@color/color_4D4D4D"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/warn_set_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="13dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/message_setting_5"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/message_setting_6"
                    android:textColor="@color/color_939393"
                    android:textSize="13sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/warn_set_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13dp"
                android:src="@drawable/select_open" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="bottom"
            android:paddingLeft="13dp"
            android:paddingBottom="2dp"
            android:text="@string/message_setting_7"
            android:textColor="@color/color_4D4D4D"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/banner_set_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="13dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/message_setting_8"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/message_setting_9"
                    android:textColor="@color/color_939393"
                    android:textSize="13sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/banner_set_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13dp"
                android:src="@drawable/select_open" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rlVersionInformation"
            android:background="@color/color_EFEFEF" />

        <LinearLayout
            android:id="@+id/sound_set_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingLeft="13dp"
                android:text="@string/message_setting_10"
                android:textColor="@color/color_4D4D4D"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/sound_set_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13dp"
                android:src="@drawable/select_close" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rlVersionInformation"
            android:background="@color/color_EFEFEF" />

        <LinearLayout
            android:id="@+id/shake_set_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingLeft="13dp"
                android:text="@string/message_setting_11"
                android:textColor="@color/color_4D4D4D"
                android:textSize="15sp" />


            <ImageView
                android:id="@+id/shake_set_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13dp"
                android:src="@drawable/select_close" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
