<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@color/color_F5F5F5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:background="@drawable/pwd_juxin_back"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="26dp"
                android:gravity="center"
                android:text="@string/trade_password"
                android:textColor="@color/color_4D4D4D"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="5"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/please_enter_your_trading_password"
                android:textColor="@color/color_2e2e2e"
                android:textColorHint="@color/color_B5B5B5"
                android:textCursorDrawable="@drawable/dialog_cursor_color"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="13dp"
            android:background="#F2F2F2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="26dp"
                android:gravity="center"
                android:text="@string/confirm_again"
                android:textColor="@color/color_4D4D4D"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="5"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/please_enter_your_trading_password_again"
                android:textColor="@color/color_2e2e2e"
                android:textColorHint="@color/color_B5B5B5"
                android:textCursorDrawable="@drawable/dialog_cursor_color"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="23dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/withdraw_password"
        android:textColor="@color/color_808080"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_0eb4fe_8_bg_normal"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>