<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_activity_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="99dp"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivPerfectInformationImg"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:src="@drawable/perfect_information_touxiang_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9dp"
        android:text="@string/persons_image"
        android:textColor="@color/color_D1D1D1"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/app_perfect_information_nickname"
            android:textColor="@color/color_929292"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tvNickname"
            android:singleLine="true"
            android:background="@null"
            android:textColor="@color/color_2e2e2e"
            android:textCursorDrawable="@drawable/dialog_cursor_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:background="@color/color_B5B5B5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvSed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_perfect_information_sed"
            android:textColor="@color/color_929292"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="57dp"
            android:layout_toRightOf="@id/tvSed"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@null"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                android:text="@string/app_male"
                android:textColor="@color/tab_text_color"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="27dp"
                android:button="@null"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                android:text="@string/app_female"
                android:textColor="@color/tab_text_color"
                android:textSize="15sp" />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:background="@color/color_B5B5B5" />

    <RelativeLayout
        android:id="@+id/rlBirthday"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_perfect_information_birthday"
            android:textColor="@color/color_929292"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvBirthdayNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/color_BBBBBB"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:background="@color/color_B5B5B5" />

    <TextView
        android:id="@+id/btnChangePassword"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_0eb4fe_8_bg"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>
